--- a/Pages/Privacy.cshtml
+++ b/Pages/Privacy.cshtml
@@ -2,95 +2,147 @@
 @model PrivacyModel
 @{
     ViewData["Title"] = "Privacy Policy";
+    List<CombinedData.MergedData> mergedList = (List<CombinedData.MergedData>)ViewData["MergedList"];
 }
 <h1>@ViewData["Title"]</h1>
 
 <p>Use this page to detail your site's privacy policy.</p>
 <h3>Search for a School by Name</h3>
-<input id="list" list="schooldata" style="width: 200px"/>
-<datalist id="schooldata">
-    
-    
-</datalist>
-<input type="button" id="submit" value="Search" />
-<input type="button" id="clear" value="Clear" />
-
+<form method="post">
+    <input id="list" list="schooldata" style="width: 200px" />
+    <datalist id="schooldata">
+    </datalist>
+    <select name="cityArea">
+        <option value="none" selected disabled hidden>
+            Select an Option
+        </option>
+        <option value="ASTORIA">ASTORIA</option>
+        <option value="BAYSIDE">BAYSIDE</option>
+        <option value="BELLEROSE">BELLEROSE</option>
+        <option value="BRONX">BRONX</option>
+        <option value="BROOKLYN">BROOKLYN</option>
+        <option value="CAMBRIA HEIGHTS">CAMBRIA HEIGHTS</option>
+        <option value="CORONA">CORONA</option>
+        <option value="ELMHURST">ELMHURST</option>
+        <option value="FAR ROCKAWAY">FAR ROCKAWAY</option>
+        <option value="FLUSHING">FLUSHING</option>
+        <option value="JAMAICA">JAMAICA</option>
+        <option value="LONG ISLAND CITY">LONG ISLAND CITY</option>
+        <option value="MANHATTAN">Manhattan</option>
+        <option value="NEW YORK">NEW YORK</option>
+        <option value="OZONE PARK">OZONE PARK</option>
+        <option value="ROCKAWAY PARK">ROCKAWAY PARK</option>
+    </select>
+    <input type="submit" id="submitSchool" value="SearchSchool" />
+    <input type="submit" id="submitCity" value="SearchCity" />
+    <input type="button" id="clear" value="Clear" />
+</form>
+</hr>
 <table id="searchout" style="width:35%">
     <tr>
         <th>School Name</th>
         <th>Crime Rate</th>
+        <th>City</th>
     </tr>
 </table>
 
+@if (Model.CallComplete)
+{
+    @foreach (var merged in mergedList)
+    {<tr>
+    <td> @merged.Dbn</td>
+
+    <td>@merged.SchoolName</td>
+
+    <td>@merged.City</td>
+
+    <td>@merged.Address</td>
+
+    <td>@merged.SchoolEmail</td>
+
+    <td>@merged.Website</td>
+
+    <td>@merged.AttendanceRate</td>
+
+    <td> @merged.GraduationRate</td>
+
+    <td>@merged.CrimeRate</td>
+
+    <br>
+</tr>
+    }
+
+}
+
 @section Scripts {
     <script>
-    $(function() {
-        loadData();
+        $(function () {
+            loadData();
 
-        var datalist = [];
+            var datalist = [];
 
-        $("#submit").on("click", function () {
+            $("#submitSchool").on("click", function () {
 
-            
-            var searchterm = $("#list").val();
-            var crimerate = "";
-            console.log(datalist[12][0]);
-            console.log(datalist[12][1]);
 
-            for (i = 0; i < datalist.length; i++) {
+                var searchterm = $("#list").val();
+                var crimerate = "";
+                console.log(datalist[12][0]);
+                console.log(datalist[12][1]);
 
-                if (datalist[i][0] = searchterm) {
-                    crimerate = datalist[i][1];
+                for (i = 0; i < datalist.length; i++) {
 
-                    
+                    if (datalist[i][0] == searchterm) {
+                        crimerate = datalist[i][1];
 
+
+
+                    }
                 }
-            } 
-            $("#searchout").append('<tr><td>'+ searchterm +'</td><td>'+ crimerate +'</td></tr>')
+                $("#searchout").append('<tr><td>' + searchterm + '</td><td>' + crimerate + '</td></tr>')
 
 
-        });
-        $("#clear").on("click", function () {
+            });
+            $("#clear").on("click", function () {
 
-            $("#searchout").empty();
-            
-            $("#searchout").append('<tr><th>School Name</th><th>Crime Rate</th></tr>');
+                $("#searchout").empty();
 
-
-        });
+                $("#searchout").append('<tr><th>School Name</th><th>Crime Rate</th></tr>');
 
 
-                function loadData() {
-                    $.ajax({
-                        url: "https://localhost:44322/index",
-                        dataType: 'json',
-                        contentType: 'application/json',
-                        method: 'GET'
-                    }).done(function (responseJSON, status, xhr) {
-                        $.each(responseJSON, function (index, item) {
+            });
 
-                            var sname = item.school_name;
-                            var crate = item.avgofnocrim_n;
 
-                            var ndata = [sname, crate];
+            function loadData() {
+                $.ajax({
+                    url: "https://localhost:44322/index",
+                    dataType: 'json',
+                    contentType: 'application/json',
+                    method: 'GET'
+                }).done(function (responseJSON, status, xhr) {
+                    $.each(responseJSON, function (index, item) {
 
-                            datalist.push(ndata);
+                        var sname = item.school_name;
+                        var crate = item.avgofnocrim_n;
 
-                            //console.log(ndata);
+                        var ndata = [sname, crate];
+
+                        datalist.push(ndata);
+
+                        //console.log(ndata);
 
                         $("#schooldata").append('<option value="' + item.school_name + '">');
 
-                            //console.log(item.school_name);
+                        //console.log(item.school_name);
 
-                        });
-                       // console.log(datalist);
-
-
-
-                    }).fail(function(xhr,status,error) {
-                        console.log("fail", xhr, status, error);
-                        alert("There was an error retrieving the data");
                     });
+                    // console.log(datalist);
+
+
+
+                }).fail(function (xhr, status, error) {
+                    console.log("fail", xhr, status, error);
+                    alert("There was an error retrieving the data");
+                });
 
             };
         });
