--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -3,8 +3,34 @@
 @{
     ViewData["Title"] = "Home page";
 }
+<style>
+    body {
+        background-color: #a29090;
+    }
+</style>
+<h1> Choose your school based on Perfomances & Safety</h1>
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+<img width="800" height="300" src="https://trenchreynolds.files.wordpress.com/2018/01/crime_in_schools.jpg" alt="School Crime Scene">
+
+<p>
+    School is supposed to be a safe haven where young people can go to learn the basics of mathematics, literature, science, and other subjects, without fearing for their safety, feeling intimidated, or being harassed. Even though school administrators and teachers work toward making the environment safe and secure, crime and violence do find their way into the hallways and classrooms and onto the school grounds. Despite media emphasis on topics such as school shootings, fatal violence at schools is relatively low. Non-fatal crime, however, occurs in far greater numbers, sometimes even more frequently at school than away from school.
+</p>
+
+<h2>Important Points to  be considered</h2>
+
+<p>
+    <strong>Balance.</strong> There are so many different levels and types of courses at high schools and no two high school curricula are exactly the same. Take advantage of what's available to you. If you're considering an ivy league school or one of a similar nature, it will most likely be in your best interest to have a rigorous course schedule. Fill your schedule with AP and Honors courses, but don't overwhelm yourself so that you're unable to keep up with the work
+</p>
+
+<p>
+    <strong>Pursue your interests.</strong> Take courses that you've been curious about or that you'll excel in. If you've thought about becoming a pastry chef, take a culinary course. But don't forget to pad your course schedule with the basics. . Your extracurricular courses will help show a school your interests and will give you more insight to the career path you may want to pursue.
+</p>
+
+<p>
+    <strong>Have a strategy.</strong> Early on, develop an idea of what types of school you're applying to so you can plan your schedule accordingly. If you are going to apply to more selective schools, take AP and Honors courses. This will show admissions officers that you're ready to take on school-level coursework. If you're going to apply to less selective schools, you may instead choose to take regular school prep courses with a few honors courses weaved in. It's important to challenge yourself and not just do the bare minimum, but you also want to be able to keep your grades up.
+</p>
+
+<p>
+    <strong> Gather information about schools Safety. </strong> Look for Crime Rate of the school. It is likely that school quality and type of schools student attend also affect criminal behaviour.As long as the rate of violence in schools is greater than zero, one would expect at least some schools to have some violence. School crime reported to the police is not only a function of the amount of disorder in the school, but also of the school’s policies and informal practices for reporting crimes to the police. Thus, police reports may not provide the best measure of violence or disorder in schools. In addition, many crimes may never come to the attention of the principal. By profiling schools with police-reported crime, therefore, the analysis may be distorting the types of problems that are occurring within the school.
+</p>
+
