--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -3,6 +3,7 @@
 @{
     ViewData["Title"] = "Home page";
 }
+
 <style>
     body {
         background-color: #a29090;
@@ -10,7 +11,21 @@
 </style>
 <h1> Choose your school based on Perfomances & Safety</h1>
 
-<img width="800" height="300" src="https://trenchreynolds.files.wordpress.com/2018/01/crime_in_schools.jpg" alt="School Crime Scene">
+<br />
+
+<div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+    <div class="carousel-inner">
+        <div class="carousel-item active">
+            <img class="d-block" src="~/img/2.jpg" alt="First slide">
+        </div>
+        <div class="carousel-item">
+            <img class="d-block" src="~/img/3.jpg" alt="Second slide">
+        </div>
+        <div class="carousel-item">
+            <img class="d-block" src="~/img/crime_in_schools.jpg" alt="Third slide">
+        </div>
+    </div>
+</div>
 
 <p>
     School is supposed to be a safe haven where young people can go to learn the basics of mathematics, literature, science, and other subjects, without fearing for their safety, feeling intimidated, or being harassed. Even though school administrators and teachers work toward making the environment safe and secure, crime and violence do find their way into the hallways and classrooms and onto the school grounds. Despite media emphasis on topics such as school shootings, fatal violence at schools is relatively low. Non-fatal crime, however, occurs in far greater numbers, sometimes even more frequently at school than away from school.
